--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
 								<span class="contact_card-data">user.fb123</span>
 
 								<a
-									href="https://m.me/bedimcode"
+									href="#"
 									target="_blank"
 									class="contact_button"
 								>
