--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 						</div>
 						<p class="about_description">
 							Frontend developer, I create web pages with UI / UX user
-							interface, I have years of experience and many clients are happy
+							interface, I have 1 year of experience and many clients are happy
 							with the projects carried out.
 						</p>
 
